[workspace]
resolver = "2"
members = [
    "crates/dash-core",
    "crates/dash-charts",
    "crates/dash-websocket",
    "crates/dash-components",
    "crates/dash-state",
    "crates/dash-app",
    "backend/dash-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["EngineVector <tomas@enginevector.com>"]
license = "MIT"
repository = "https://github.com/enginevector/btc-exchange-dash"

[workspace.dependencies]
# Leptos ecosystem
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7", features = ["csr"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# WebSocket
gloo-net = "0.6"
gloo-timers = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
console_error_panic_hook = "0.1"

# Web APIs
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "DomRect",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "MouseEvent",
    "SvgElement",
    "SvgGraphicsElement",
    "console",
] }

# Backend dependencies
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Random for mock data
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3