[workspace]
resolver = "2"
members = [
    "crates/dash-core",
    "crates/dash-charts",
    "crates/dash-websocket",
    "crates/dash-components",
    "crates/dash-state",
    "crates/dash-app",
    "server/dash-server",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3