[package]
name = "dash-components"
version = "0.1.0"
edition = "2024"
authors = ["EngineVector <tomas@enginevector.com>"]
license = "MIT"
repository = "https://github.com/enginevector/btc-exchange-dash"
description = "Leptos UI components for BTC Exchange Dashboard"

[dependencies]
dash-core = { path = "../dash-core" }
dash-state = { path = "../dash-state" }
dash-charts = { path = "../dash-charts" }

leptos = { version = "0.7", features = ["csr"] }

chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
web-sys = { version = "0.3", features = ["Window", "Location"] }

tracing = "0.1"