[package]
name = "dash-state"
version = "0.1.0"
edition = "2024"
authors = ["EngineVector <tomas@enginevector.com>"]
license = "MIT"
repository = "https://github.com/enginevector/btc-exchange-dash"
description = "Reactive state management for BTC Exchange Dashboard"

[dependencies]
dash-core = { path = "../dash-core" }
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
tracing = "0.1"