[package]
name = "dash-websocket"
version = "0.1.0"
edition = "2024"
authors = ["EngineVector <tomas@enginevector.com>"]
license = "MIT"
repository = "https://github.com/enginevector/btc-exchange-dash"
description = "WebSocket client with auto-reconnection for BTC Exchange Dashboard"

[dependencies]
dash-core = { path = "../dash-core" }
dash-state = { path = "../dash-state" }

leptos = { version = "0.7", features = ["csr"] }

gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }

futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"